syntax = "proto3";

package node;

option go_package = "github.com/substrafoundation/substra-orchestrator/lib/assets/node";

message Node {
    string id = 1;
}

message NodeQueryResponse {
    repeated Node nodes = 1;
}

message NodeQueryParam {}

service NodeService {
    rpc RegisterNode(Node) returns (Node) {}
    rpc QueryNodes(NodeQueryParam) returns (NodeQueryResponse) {}
}
